# redist

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  knunu.ipynb  knunu_sample.py  knunu_utils.py  logo.py  pilnu.ipynb  pilnu_utils.py  pyproject.toml  requirements.txt  setup.py  test.ipynb  test3dmap.ipynb  test_eos.ipynb
.github/workflows/: actions.yml  actions_hammer.yml
examples/: combination.ipynb  combination_MAP.py  combination_fit.ipynb  combination_plot_samples.ipynb  combination_sample.ipynb  combination_sample.py  knunu.ipynb  knunu_MAP.py  knunu_binning.ipynb  knunu_model.ipynb  knunu_model.json  knunu_plot_samples.ipynb  knunu_sample.ipynb  knunu_sample.py  knunu_theory.ipynb  knunu_utils.py  ksnunu.ipynb  ksnunu_binning.ipynb  ksnunu_constraint.yaml  ksnunu_model.ipynb  ksnunu_model.json  ksnunu_plot_samples.ipynb  ksnunu_sample.ipynb  ksnunu_sample.py  ksnunu_theory.ipynb  ksnunu_utils.py  pilnu.ipynb  pilnu_model.json  pilnu_sample.ipynb  pilnu_sample.py  pilnu_utils.py  simple.ipynb  test.ipynb  test3dmap.ipynb
examples/combination/: combination_MAP.py  combination_fit.ipynb  combination_plot_samples.ipynb  combination_sample.py
examples/hammer/: B02DstTauNu_config.json  B02DstTauNu_example.ipynb  B02DstTauNu_fit.ipynb  B02DstTauNu_model.ipynb  B02DstTauNu_model.json
examples/hammer/.ipynb_checkpoints/: B02DstTauNu_example-checkpoint.ipynb  B02DstTauNu_fit-checkpoint.ipynb  B02DstTauNu_model-checkpoint.ipynb
examples/knunu/: knunu_MAP.py  knunu_binning.ipynb  knunu_model.ipynb  knunu_plot_samples.ipynb  knunu_sample.py  knunu_theory.ipynb  knunu_utils.py
examples/ksnunu/: ksnunu_binning.ipynb  ksnunu_constraint.yaml  ksnunu_model.ipynb  ksnunu_plot_samples.ipynb  ksnunu_sample.py  ksnunu_theory.ipynb  ksnunu_utils.py
examples/pilnu/: pilnu.ipynb  pilnu_sample.ipynb  pilnu_sample.py  pilnu_utils.py
examples/samples/: knunu_post_data.json  knunu_post_pred.json  knunu_prior_pred.json  pilnu_post_data.json  pilnu_post_pred.json  pilnu_prior_pred.json
publik/: modifier.py  plot.py
publik/pyhf_modifier/: modifier.py  plot.py
redist/: __init__.py  custom_modifier.py  hammer_fit.py  modifier.py  modifier_hammer.py  plot.py  style.mplstyle
test/: test_functions.py  test_hammer.py  test_hammer_interface.py  test_hammer_modifier.py  test_simple_model.py  test_simple_model_3d.py
test/hammer_file/: test_hammer_file.root
test/models/: simple_model.json
