[project]
name = "redist"
dynamic = ["version"]
description = "Package for reinterpretation of particle physics results"
readme = "README.md"
license = { text = "MIT" }  # SPDX short identifier
authors = [
  { name = "Lorenz Gaertner", email = "lorenz.gaertner@gmail.com" },
]
maintainers = [
  { name = "Lorenz Gaertner", email = "lorenz.gaertner@gmail.com" },
]
requires-python = ">=3.8"

dependencies = [
    "jsonschema",
    "matplotlib",
    "numpy",
    "scipy",
    "pyhf",
    "requests",
    "numexpr",
    "iminuit",
    "jinja2",
    "ipykernel",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.4",
    "pre-commit",
    "pytest",
    "uv",
]
eos = [
    "eoshep>=1.0.11",
    "dynesty==2.0.3",
]
bayesian = [
  "bayesian_pyhf @ git+https://github.com/malin-horstmann/bayesian_pyhf.git",
  "corner",
]

[project.urls]
Homepage = "https://github.com/lorenzennio/redist"
Documentation = "https://github.com/lorenzennio/redist"
"Issue Tracker" = "https://github.com/lorenzennio/redist/issues"

[tool.ruff]
exclude = ['examples']